update dapr samples ready for 0.6 Removed MQTT sample as this no longer works with new AUTH model, will recreate after release
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/samples/dapr-service-bus-dotnet/app.yaml
+++ b/samples/dapr-service-bus-dotnet/app.yaml
@@ -4,54 +4,52 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: aio-mq-pubsub
+  name: iotoperations-pubsub
   namespace: azure-iot-operations
   annotations:
     dapr.io/component-container: >
       {
-        "name": "aio-mq-components",
-        "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
+        "name": "iot-operations-dapr-components",
+        "image": "ghcr.io/azure/iot-operations-dapr-components:latest",
         "volumeMounts": [
-          {
-            "name": "dapr-client-token",
-            "mountPath": "/var/run/secrets/tokens"
-          },
-          {
-            "name": "aio-ca-trust-bundle",
-            "mountPath": "/var/run/certs/aio-mq-ca-cert"
-          }
+          { "name": "mqtt-client-token", "mountPath": "/var/run/secrets/tokens" },
+          { "name": "aio-ca-trust-bundle", "mountPath": "/var/run/certs/aio-mq-ca-cert" }
         ]
       }
 spec:
-  type: pubsub.aio-mq-pubsub-pluggable # DO NOT CHANGE
+  type: pubsub.azure.iotoperations
   version: v1
   metadata:
-  - name: url
-    value: "aio-mq-dmqtt-frontend:8883"
-  - name: satTokenPath
-    value: "/var/run/secrets/tokens/dapr-client-token"
-  - name: tlsEnabled
+  - name: hostname
+    value: aio-mq-dmqtt-frontend
+  - name: tcpPort
+    value: 8883
+  - name: useTls
     value: true
-  - name: caCertPath
-    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+  - name: caFile
+    value: /var/run/certs/aio-mq-ca-cert/ca.crt
+  - name: satAuthFile
+    value: /var/run/secrets/tokens/mqtt-client-token
 ---
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: aio-mq-statestore
+  name: iotoperations-statestore
   namespace: azure-iot-operations
 spec:
-  type: state.aio-mq-statestore-pluggable # DO NOT CHANGE
+  type: state.azure.iotoperations
   version: v1
   metadata:
-  - name: url
-    value: "aio-mq-dmqtt-frontend:8883"
-  - name: satTokenPath
-    value: "/var/run/secrets/tokens/dapr-client-token"
-  - name: tlsEnabled
+  - name: hostname
+    value: aio-mq-dmqtt-frontend
+  - name: tcpPort
+    value: 8883
+  - name: useTls
     value: true
-  - name: caCertPath
-    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+  - name: caFile
+    value: /var/run/certs/aio-mq-ca-cert/ca.crt
+  - name: satAuthFile
+    value: /var/run/secrets/tokens/mqtt-client-token
 ---
 apiVersion: dapr.io/v1alpha1
 kind: Component
@@ -81,7 +79,6 @@ metadata:
   name: dapr-workload-service-bus-dotnet
   namespace: azure-iot-operations
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: dapr-workload-service-bus-dotnet
@@ -95,15 +92,14 @@ spec:
         dapr.io/app-id: "dapr-workload-service-bus-dotnet"
         dapr.io/app-port: "6001"
         dapr.io/app-protocol: "http"
-        dapr.io/log-level: "debug"
     spec:
       serviceAccountName: dapr-client
       volumes:
-        - name: dapr-client-token
+        - name: mqtt-client-token
           projected:
             sources:
               - serviceAccountToken:
-                  path: dapr-client-token
+                  path: mqtt-client-token
                   audience: aio-mq
                   expirationSeconds: 86400    
         - name: aio-ca-trust-bundle
