--- a/tutorials/mq-event-driven-dapr/app.yaml
+++ b/tutorials/mq-event-driven-dapr/app.yaml
@@ -4,48 +4,52 @@
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: aio-mq-pubsub
+  name: iotoperations-pubsub
   namespace: azure-iot-operations
   annotations:
     dapr.io/component-container: >
       {
-        "name": "aio-mq-components",
-        "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
+        "name": "iot-operations-dapr-components",
+        "image": "ghcr.io/azure/iot-operations-dapr-components:latest",
         "volumeMounts": [
           { "name": "mqtt-client-token", "mountPath": "/var/run/secrets/tokens" },
           { "name": "aio-ca-trust-bundle", "mountPath": "/var/run/certs/aio-mq-ca-cert" }
         ]
       }
 spec:
-  type: pubsub.aio-mq-pubsub-pluggable # DO NOT CHANGE
+  type: pubsub.azure.iotoperations
   version: v1
   metadata:
-  - name: url
+  - name: hostname
     value: aio-mq-dmqtt-frontend
-  - name: port
+  - name: tcpPort
     value: 8883
-  - name: satTokenPath
-    value: "/var/run/secrets/tokens/mqtt-client-token"
-  - name: caCertPath
-    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+  - name: useTls
+    value: true
+  - name: caFile
+    value: /var/run/certs/aio-mq-ca-cert/ca.crt
+  - name: satAuthFile
+    value: /var/run/secrets/tokens/mqtt-client-token
 ---
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
-  name: aio-mq-statestore
+  name: iotoperations-statestore
   namespace: azure-iot-operations
 spec:
-  type: state.aio-mq-statestore-pluggable # DO NOT CHANGE
+  type: state.azure.iotoperations
   version: v1
   metadata:
-  - name: url
+  - name: hostname
     value: aio-mq-dmqtt-frontend
-  - name: port
-    value: 8883  
-  - name: satTokenPath
-    value: "/var/run/secrets/tokens/mqtt-client-token"
-  - name: caCertPath
-    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+  - name: tcpPort
+    value: 8883
+  - name: useTls
+    value: true
+  - name: caFile
+    value: /var/run/certs/aio-mq-ca-cert/ca.crt
+  - name: satAuthFile
+    value: /var/run/secrets/tokens/mqtt-client-token
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -58,37 +62,40 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dapr-workflow-sample
+  name: mq-event-driven-dapr
   namespace: azure-iot-operations
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: dapr-workflow-sample
+      app: mq-event-driven-dapr
   template:
     metadata:
       labels:
-        app: dapr-workflow-sample
+        app: mq-event-driven-dapr
       annotations:
         dapr.io/enabled: "true"
         dapr.io/inject-pluggable-components: "true"
-        dapr.io/app-id: "dapr-workflow-sample"
+        dapr.io/app-id: "mq-event-driven-dapr"
         dapr.io/app-port: "6001"
         dapr.io/app-protocol: "grpc"
     spec:
       serviceAccountName: dapr-client
+
       volumes:
+      # SAT token used to authenticate between Dapr and the MQTT broker      
       - name: mqtt-client-token
         projected:
           sources:
-            - serviceAccountToken:
-                path: mqtt-client-token
-                audience: aio-mq
-                expirationSeconds: 86400    
+          - serviceAccountToken:
+              path: mqtt-client-token
+              audience: aio-mq
+              expirationSeconds: 600
+
+      # Certificate chain for Dapr to validate the MQTT broker
       - name: aio-ca-trust-bundle
         configMap:
-            name: aio-ca-trust-bundle-test-only
+          name: aio-ca-trust-bundle-test-only
+
       containers:
-      - name: dapr-workload-sample
-        image: dapr-workflow-sample
-        imagePullPolicy: Never
+      - name: mq-event-driven-dapr
+        image: ghcr.io/azure-samples/explore-iot-operations/mq-event-driven-dapr:latest
