--- a/samples/quickstarts/az-mqtt-non-tls-listener.yaml
+++ b/samples/quickstarts/az-mqtt-non-tls-listener.yaml
@@ -1,14 +1,13 @@
-# Important: do not use in production environments
-apiVersion: mq.iotoperations.azure.com/v1beta1
+# Important: This listener will enable an open MQTT port to facilitate development and testing.
+# Do not use in production environments.
+apiVersion: mqttbroker.iotoperations.azure.com/v1beta1
 kind: BrokerListener
 metadata:
   name: az-mqtt-non-tls-listener
   namespace: azure-iot-operations
 spec:
   brokerRef: broker
-  authenticationEnabled: false
-  authorizationEnabled: false
-  port: 1883
-
+  ports:
+  - port: 1883
   serviceName: aio-mq-dmqtt-frontend-nontls
   serviceType: loadBalancer
