--- a/samples/context-app-csharp/console-app-secret.yaml
+++ b/samples/context-app-csharp/console-app-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: console-app-credentials
 type: Opaque
 data:
-  username: aHA=  # Base64 encoded username
-  password: YWxvaG9tb3Jh  # Base64 encoded password
+  username: some_base64_enc_user # Base64 encoded username
+  password: some_base64_enc_pwd  # Base64 encoded password
