--- a/samples/context-app-csharp/console-app-configmap.yaml
+++ b/samples/context-app-csharp/console-app-configmap.yaml
@@ -3,11 +3,11 @@ kind: ConfigMap
 metadata:
   name: console-app-config
 data:
-  ENDPOINT_TYPE: "http"  
-  AUTH_TYPE: "httpbasic"
-  REQUEST_INTERVAL_SECONDS: "15"
-  DSS_KEY: "quality"
-  MQTT_HOST: "10.43.44.15"
-  MQTT_CLIENT_ID : "console-app"
-  HTTP_BASE_URL: "http://my-backend-api-s.default.svc.cluster.local"
+  HTTP_BASE_URL: "http://my-backend-api-s.default.svc.cluster.local:80" # The URL of the backend API. Replace with your own value.
   HTTP_PATH: "contexts/quality"
+  REQUEST_INTERVAL_SECONDS: "10"
+  AUTH_TYPE: "httpbasic"
+  ENDPOINT_TYPE: "http"
+  DSS_KEY: "quality"
+  MQTT_HOST: "10.10.10.10" # The ip of the BROKER API. Replace with your own value.
+  MQTT_CLIENT_ID: "console-app" # The client ID of the MQTT client. Replace with your own value.
