--- a/samples/context-app-dotnet/console-app-secret.yaml
+++ b/samples/context-app-dotnet/console-app-secret.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: console-app-credentials
+  name: console-app-secret
 type: Opaque
 data:
-  username: some_base64_enc_user # Base64 encoded username
-  password: some_base64_enc_pwd  # Base64 encoded password
+  httpusername: some_base64_enc_username_for_http_service # Base64 encoded username
+  httppassword: some_base64_enc_pwd_for_http_service  # Base64 encoded password
+  sqlpassword: some_base64_enc_pwd_for_sql_server  # Base64 encoded sqlpassword. Same as the "SA_PASSWORD" if the default user "SA" is used.
