--- a/samples/context-app-dotnet/console-app-deployment.yaml
+++ b/samples/context-app-dotnet/console-app-deployment.yaml
@@ -13,6 +13,7 @@ spec:
         app: console-app-deployment
     spec:
       containers:
+      
       - name: console-app-deployment
         image: my-registry/context-app-for-dss:latest
         imagePullPolicy: Always
@@ -43,14 +44,28 @@ spec:
               key: sqlpassword
         - name: CA_FILE_PATH
           value: "/app/certs/cafile.crt"
-        - name: SAT_TOKEN_PATH
-          value: "/app/secrets/sat_token"
+        # Commented out SAT_TOKEN_PATH
+        #- name: SAT_TOKEN_PATH
+        #  value: "/app/secrets/sat_token"
+        - name: CLIENT_CERT_FILE
+          value: /etc/mqtt-certs/x509.crt
+        - name: CLIENT_KEY_FILE
+          value: /etc/mqtt-certs/x509.key
+        - name: CLIENT_KEY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: x509-secret
+              key: x509_password
         volumeMounts:
         - name: ca-cert-file
           mountPath: /app/certs
           readOnly: true
-        - name: sat-token
-          mountPath: /app/secrets
+        # Commented out sat-token volume mount
+        #- name: sat-token
+        #  mountPath: /app/secrets
+        #  readOnly: true
+        - name: client-certs
+          mountPath: /etc/mqtt-certs
           readOnly: true
       volumes:
       - name: ca-cert-file
@@ -59,9 +74,18 @@ spec:
           items:
           - key: tls.crt
             path: cafile.crt
-      - name: sat-token
+      # Commented out sat-token volume
+      #- name: sat-token
+      #  secret:
+      #    secretName: sat-token-secret
+      #    items:
+      #    - key: token
+      #      path: sat_token
+      - name: client-certs
         secret:
-          secretName: sat-token-secret
+          secretName: x509-secret
           items:
-          - key: token
-            path: sat_token
+          - key: x509.crt
+            path: x509.crt
+          - key: x509.key
+            path: x509.key
