--- a/samples/context-app-dotnet/console-app-configmap.yaml
+++ b/samples/context-app-dotnet/console-app-configmap.yaml
@@ -9,6 +9,7 @@ data:
   DSS_KEY: "quality"
   MQTT_HOST: "10.10.10.10" # The ip of the BROKER API. Replace with your own value.
   MQTT_CLIENT_ID: "console-app" # The client ID of the MQTT client. Replace with your own value.
+  MQTT_PORT: "8883"
 
   HTTP_BASE_URL: "http://my-backend-api-s.default.svc.cluster.local:80" # The URL of the backend API. Replace with your own value.
   HTTP_PATH: "contexts/quality" # The path of the API endpoint. Replace with your own value.
