--- a/samples/context-app-dotnet/values.yaml
+++ b/samples/context-app-dotnet/values.yaml
@@ -7,7 +7,7 @@ image:
 
 endpointType: "http"  # "http" or "sql"
 authType: "httpbasic"  # "httpbasic" or "sqlbasic"
-useTLS: true
+useTLS: false
 clientAuthMethod: "sat"  # "sat" or "x509"
 
 sat:
@@ -20,14 +20,10 @@ x509:
   secretName: x509-secret
   passwordEnabled: false
 
-volumes:
-  caCert:
-    secretName: test-ca
-
 config:
   requestIntervalSeconds: "10"
   dssKey: "quality"
-  mqttHost: "10.43.91.134"
+  mqttHost: "aio-mq-dmqtt-frontend.default.svc.cluster.local"
   mqttClientId: "app-id"
   httpBaseUrl: "http://my-backend-api-s.default.svc.cluster.local:80"
   httpPath: "contexts/quality"
