--- a/samples/context-app-dotnet/Chart.yaml
+++ b/samples/context-app-dotnet/Chart.yaml
@@ -1,6 +1,6 @@
 # Chart.yaml
 apiVersion: v2
 name: contextualization-app
-description: A Helm chart for the Contextual Application to store data in Distributed State Stores
+description: A Helm chart for the Contextual Application to store data in DSSs
 version: 0.1.0
 type: application
