--- a/samples/http-sql-connector-app-dotnet/NuGet.config
+++ b/samples/http-sql-connector-app-dotnet/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="sdklite-previews" value="https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json" />
+    <add key="preview" value="https://pkgs.dev.azure.com/azure-iot-sdks/iot-operations/_packaging/preview/nuget/v3/index.json" />
   </packageSources>
 </configuration>
