--- a/samples/quickstarts/opc-plc-deployment.yaml
+++ b/samples/quickstarts/opc-plc-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: opc-plc-deployment
+  name: opc-plc-000000
   namespace: azure-iot-operations
   labels:
     app.kubernetes.io/component: opcplc-000000
@@ -22,38 +22,42 @@ spec:
           - "--ph=opcplc-000000"
           - "--cdn=opcplc-000000"
           - "--ut"
-          - "--trustowncert" # Can we remove?
           - "--sn=25"
           - "--sr=10"
           - "--fn=2000"
-          - "--veryfastrate=1000"          
+          - "--veryfastrate=1000"
           - "--gn=5"
           - "--pn=50000"
           - "--maxsessioncount=100"
           - "--maxsubscriptioncount=100"
-          - "--maxqueuedrequestcount=2000"          
+          - "--maxqueuedrequestcount=2000"
           - "--ses"
           - "--alm"
           - "--at=FlatDirectory"
-          - "--drurs"        
+          - "--drurs"
           - "--ll-debug"
         ports:
         - containerPort: 50000
         volumeMounts:
-          - name: opc-plc-tls
+          - name: opc-plc-default-application-cert
             mountPath: /app/pki/own
-          - name: opc-plc-tls
-            mountPath: /app/pki/trusted # Trust own cert
+          - name: opc-plc-trust-list
+            mountPath: /app/pki/trusted
       volumes:
-        - name: opc-plc-tls
+        - name: opc-plc-default-application-cert
           secret:
-            secretName: opc-plc-tls
+            secretName: opc-plc-default-application-cert
+        - name: opc-plc-trust-list
+          secret:
+            secretName: opc-plc-trust-list
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: opcplc-000000
   namespace: azure-iot-operations
+  labels:
+    app.kubernetes.io/component: opcplc-000000
 spec:
   type: ClusterIP
   selector:
@@ -64,16 +68,28 @@ spec:
       targetPort: 50000
 ---
 apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: opc-plc-self-signed-issuer
+  namespace: azure-iot-operations
+  labels:
+    app.kubernetes.io/component: opcplc-000000
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: opc-plc-certificate
+  name: opc-plc-default-application-cert
   namespace: azure-iot-operations
+  labels:
+    app.kubernetes.io/component: opcplc-000000
 spec:
-  secretName: opc-plc-tls
+  secretName: opc-plc-default-application-cert
   duration: 2160h # 90d
   renewBefore: 360h # 15d
   issuerRef:
-    name: aio-opc-opcuabroker-default-root-ca-issuer
+    name: opc-plc-self-signed-issuer
     kind: Issuer
   commonName: OpcPlc
   dnsNames:
@@ -93,3 +109,13 @@ spec:
     size: 2048
   encodeUsagesInRequest: true
   isCA: false
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: opc-plc-trust-list
+  namespace: azure-iot-operations
+  labels:
+    app.kubernetes.io/component: opcplc-000000
+data:
+  # empty
