--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,7 +37,7 @@
   },
   "onCreateCommand": "bash .devcontainer/onCreateCommand.sh",
   // Delete the JetBrains editor to save 12GB of space
-  "postStartCommand": "rm -rf /workspaces/.codespaces/shared/editors/jetbrains",
+  // "postStartCommand": "rm -rf /workspaces/.codespaces/shared/editors/jetbrains",
   "postAttachCommand": "printenv | grep -E 'SUBSCRIPTION_ID|RESOURCE_GROUP|LOCATION|CLUSTER_NAME'"
   // Configure tool-specific properties.
   // "customizations": {},
